@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,11 +38,6 @@ import jdk.javadoc.internal.doclets.toolkit.taglets.InheritableTaglet;
 
 /**
  * Search for the requested documentation.  Inherit documentation if necessary.
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
  */
 public class DocFinder {
 
@@ -197,7 +192,7 @@ public class DocFinder {
         /**
          * The inherited documentation.
          */
-        public List<? extends DocTree> inlineTags = Collections.emptyList();
+        public List<? extends DocTree> inlineTags = List.of();
 
         /**
          * False if documentation could not be inherited.
